--- a/notebooks/3_In_situ_data/in_situ_data.html
+++ b/notebooks/3_In_situ_data/in_situ_data.html
@@ -14264,11 +14264,12 @@ a.anchor-link {
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[1]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[22]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">pandas</span> <span class="k">as</span> <span class="nn">pd</span>
 <span class="kn">import</span> <span class="nn">geopandas</span> <span class="k">as</span> <span class="nn">gpd</span>
+<span class="kn">import</span> <span class="nn">numpy</span> <span class="k">as</span> <span class="nn">np</span>
 <span class="kn">import</span> <span class="nn">matplotlib.pyplot</span> <span class="k">as</span> <span class="nn">plt</span>
 <span class="kn">from</span> <span class="nn">pathlib</span> <span class="kn">import</span> <span class="n">Path</span>
 <span class="kn">from</span> <span class="nn">IPython.display</span> <span class="kn">import</span> <span class="n">Image</span>
@@ -15248,7 +15249,7 @@ dtype: object
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[12]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[27]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">dataset_to_merge</span> <span class="o">=</span> <span class="p">[</span><span class="n">lut_clean_crop_gdf</span><span class="p">,</span> <span class="n">clean_non_crop_gdf</span><span class="p">]</span>
@@ -15260,6 +15261,8 @@ dtype: object
 <span class="n">in_situ_gdf</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">concat</span><span class="p">(</span><span class="n">dataset_to_merge</span><span class="p">,</span> <span class="n">ignore_index</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
 
 <span class="c1"># Set a new unique ID</span>
+
+<span class="n">in_situ_gdf</span><span class="o">.</span><span class="n">index</span> <span class="o">+=</span><span class="mi">1</span>
 <span class="n">in_situ_gdf</span><span class="p">[</span><span class="s1">&#39;id&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="n">in_situ_gdf</span><span class="o">.</span><span class="n">index</span>
 
 <span class="n">display</span><span class="p">(</span><span class="n">in_situ_gdf</span><span class="o">.</span><span class="n">head</span><span class="p">())</span>
@@ -15323,39 +15326,39 @@ Columns non-cropland gdf : Index([&#39;id_ori&#39;, &#39;sub_nb&#39;, &#39;geome
   </thead>
   <tbody>
     <tr>
-      <th>0</th>
+      <th>1</th>
       <td>167</td>
       <td>POLYGON ((636106.223 5595512.196, 636122.069 5...</td>
-      <td>3199</td>
-      <td>0</td>
-    </tr>
-    <tr>
-      <th>1</th>
-      <td>483</td>
-      <td>POLYGON ((629761.504 5593158.472, 629780.378 5...</td>
       <td>3199</td>
       <td>1</td>
     </tr>
     <tr>
       <th>2</th>
-      <td>1181</td>
-      <td>POLYGON ((636735.316 5595728.754, 636750.328 5...</td>
+      <td>483</td>
+      <td>POLYGON ((629761.504 5593158.472, 629780.378 5...</td>
       <td>3199</td>
       <td>2</td>
     </tr>
     <tr>
       <th>3</th>
-      <td>1234</td>
-      <td>POLYGON ((630113.339 5594270.350, 630101.635 5...</td>
+      <td>1181</td>
+      <td>POLYGON ((636735.316 5595728.754, 636750.328 5...</td>
       <td>3199</td>
       <td>3</td>
     </tr>
     <tr>
       <th>4</th>
+      <td>1234</td>
+      <td>POLYGON ((630113.339 5594270.350, 630101.635 5...</td>
+      <td>3199</td>
+      <td>4</td>
+    </tr>
+    <tr>
+      <th>5</th>
       <td>3399</td>
       <td>POLYGON ((637115.003 5595823.427, 637115.003 5...</td>
       <td>3199</td>
-      <td>4</td>
+      <td>5</td>
     </tr>
   </tbody>
 </table>
@@ -15388,7 +15391,7 @@ Columns non-cropland gdf : Index([&#39;id_ori&#39;, &#39;sub_nb&#39;, &#39;geome
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[13]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[28]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Open Sen4Stat LUT file</span>
@@ -15592,7 +15595,7 @@ Columns non-cropland gdf : Index([&#39;id_ori&#39;, &#39;sub_nb&#39;, &#39;geome
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[14]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[29]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">lut_in_situ_gdf</span> <span class="o">=</span> <span class="n">in_situ_gdf</span><span class="o">.</span><span class="n">merge</span><span class="p">(</span><span class="n">s4s_lut_df</span><span class="p">,</span> <span class="n">on</span><span class="o">=</span><span class="s1">&#39;sub_nb&#39;</span><span class="p">)</span>
@@ -15658,7 +15661,7 @@ Columns non-cropland gdf : Index([&#39;id_ori&#39;, &#39;sub_nb&#39;, &#39;geome
   <tbody>
     <tr>
       <th>0</th>
-      <td>0</td>
+      <td>1</td>
       <td>3</td>
       <td>Grassland and meadows</td>
       <td>31</td>
@@ -15675,7 +15678,7 @@ Columns non-cropland gdf : Index([&#39;id_ori&#39;, &#39;sub_nb&#39;, &#39;geome
     </tr>
     <tr>
       <th>1</th>
-      <td>1</td>
+      <td>2</td>
       <td>3</td>
       <td>Grassland and meadows</td>
       <td>31</td>
@@ -15692,7 +15695,7 @@ Columns non-cropland gdf : Index([&#39;id_ori&#39;, &#39;sub_nb&#39;, &#39;geome
     </tr>
     <tr>
       <th>2</th>
-      <td>2</td>
+      <td>3</td>
       <td>3</td>
       <td>Grassland and meadows</td>
       <td>31</td>
@@ -15709,7 +15712,7 @@ Columns non-cropland gdf : Index([&#39;id_ori&#39;, &#39;sub_nb&#39;, &#39;geome
     </tr>
     <tr>
       <th>3</th>
-      <td>3</td>
+      <td>4</td>
       <td>3</td>
       <td>Grassland and meadows</td>
       <td>31</td>
@@ -15726,7 +15729,7 @@ Columns non-cropland gdf : Index([&#39;id_ori&#39;, &#39;sub_nb&#39;, &#39;geome
     </tr>
     <tr>
       <th>4</th>
-      <td>4</td>
+      <td>5</td>
       <td>3</td>
       <td>Grassland and meadows</td>
       <td>31</td>
@@ -15767,7 +15770,7 @@ Columns non-cropland gdf : Index([&#39;id_ori&#39;, &#39;sub_nb&#39;, &#39;geome
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[15]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[30]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># A smaller ROI is used to illustrate</span>
@@ -16043,7 +16046,7 @@ Columns non-cropland gdf : Index([&#39;id_ori&#39;, &#39;sub_nb&#39;, &#39;geome
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[21]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[31]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">lut_in_situ_gdf</span><span class="o">.</span><span class="n">to_file</span><span class="p">(</span><span class="n">in_situ_file_shp</span><span class="p">)</span>
