--- a/notebooks/7_Classification/in_situ_sampling_design.html
+++ b/notebooks/7_Classification/in_situ_sampling_design.html
@@ -14264,7 +14264,7 @@ a.anchor-link {
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[32]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[1]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">pandas</span> <span class="k">as</span> <span class="nn">pd</span>
@@ -14318,7 +14318,7 @@ GeoPandas : 0.9.0
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[33]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[2]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">computer_path</span> <span class="o">=</span> <span class="s1">&#39;/export/miro/ndeffense/LBRAT2104/&#39;</span>
@@ -14343,7 +14343,7 @@ GeoPandas : 0.9.0
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[34]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[3]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">site</span> <span class="o">=</span> <span class="s1">&#39;NAMUR&#39;</span>
@@ -14373,7 +14373,7 @@ GeoPandas : 0.9.0
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[35]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[4]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">in_situ_prepared_shp</span> <span class="o">=</span> <span class="sa">f</span><span class="s1">&#39;</span><span class="si">{</span><span class="n">in_situ_path</span><span class="si">}{</span><span class="n">site</span><span class="si">}</span><span class="s1">_</span><span class="si">{</span><span class="n">year</span><span class="si">}</span><span class="s1">_IN_SITU_ROI_prepared.shp&#39;</span>
@@ -14395,7 +14395,7 @@ GeoPandas : 0.9.0
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[36]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[5]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">gdf</span> <span class="o">=</span> <span class="n">gpd</span><span class="o">.</span><span class="n">read_file</span><span class="p">(</span><span class="n">in_situ_prepared_shp</span><span class="p">)</span>
@@ -14460,7 +14460,7 @@ GeoPandas : 0.9.0
   <tbody>
     <tr>
       <th>0</th>
-      <td>3</td>
+      <td>4</td>
       <td>3</td>
       <td>Grassland and meadows</td>
       <td>31</td>
@@ -14479,7 +14479,7 @@ GeoPandas : 0.9.0
     </tr>
     <tr>
       <th>1</th>
-      <td>4</td>
+      <td>5</td>
       <td>3</td>
       <td>Grassland and meadows</td>
       <td>31</td>
@@ -14498,7 +14498,7 @@ GeoPandas : 0.9.0
     </tr>
     <tr>
       <th>2</th>
-      <td>5</td>
+      <td>6</td>
       <td>3</td>
       <td>Grassland and meadows</td>
       <td>31</td>
@@ -14517,7 +14517,7 @@ GeoPandas : 0.9.0
     </tr>
     <tr>
       <th>3</th>
-      <td>6</td>
+      <td>7</td>
       <td>3</td>
       <td>Grassland and meadows</td>
       <td>31</td>
@@ -14536,7 +14536,7 @@ GeoPandas : 0.9.0
     </tr>
     <tr>
       <th>4</th>
-      <td>8</td>
+      <td>9</td>
       <td>3</td>
       <td>Grassland and meadows</td>
       <td>31</td>
@@ -14575,7 +14575,7 @@ GeoPandas : 0.9.0
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[37]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[6]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">gdf</span><span class="p">[</span><span class="s1">&#39;crop_pix&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="n">gdf</span><span class="o">.</span><span class="n">groupby</span><span class="p">(</span><span class="n">field_classif_code</span><span class="p">)[</span><span class="s1">&#39;pix_count&#39;</span><span class="p">]</span><span class="o">.</span><span class="n">transform</span><span class="p">(</span><span class="s1">&#39;sum&#39;</span><span class="p">)</span>
@@ -14644,7 +14644,7 @@ GeoPandas : 0.9.0
   <tbody>
     <tr>
       <th>0</th>
-      <td>3</td>
+      <td>4</td>
       <td>3</td>
       <td>Grassland and meadows</td>
       <td>31</td>
@@ -14665,7 +14665,7 @@ GeoPandas : 0.9.0
     </tr>
     <tr>
       <th>1</th>
-      <td>4</td>
+      <td>5</td>
       <td>3</td>
       <td>Grassland and meadows</td>
       <td>31</td>
@@ -14686,7 +14686,7 @@ GeoPandas : 0.9.0
     </tr>
     <tr>
       <th>2</th>
-      <td>5</td>
+      <td>6</td>
       <td>3</td>
       <td>Grassland and meadows</td>
       <td>31</td>
@@ -14707,7 +14707,7 @@ GeoPandas : 0.9.0
     </tr>
     <tr>
       <th>3</th>
-      <td>6</td>
+      <td>7</td>
       <td>3</td>
       <td>Grassland and meadows</td>
       <td>31</td>
@@ -14728,7 +14728,7 @@ GeoPandas : 0.9.0
     </tr>
     <tr>
       <th>4</th>
-      <td>8</td>
+      <td>9</td>
       <td>3</td>
       <td>Grassland and meadows</td>
       <td>31</td>
@@ -14771,7 +14771,7 @@ GeoPandas : 0.9.0
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[38]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[7]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">gdf</span><span class="p">[</span><span class="s1">&#39;strategy&#39;</span><span class="p">]</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">where</span><span class="p">(</span><span class="n">gdf</span><span class="p">[</span><span class="s1">&#39;pix_count&#39;</span><span class="p">]</span> <span class="o">&lt;</span> <span class="n">pix_best</span><span class="p">,</span> <span class="mi">3</span><span class="p">,</span>
@@ -14906,7 +14906,7 @@ GeoPandas : 0.9.0
     <tr>
       <th>403</th>
       <td>1923</td>
-      <td>Flax, hemp and other similar crops</td>
+      <td>Flax  hemp and other similar crops</td>
       <td>2810</td>
       <td>0.026138</td>
       <td>2</td>
@@ -15002,7 +15002,7 @@ GeoPandas : 0.9.0
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[39]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[8]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">training_pixels</span> <span class="o">=</span> <span class="n">defaultdict</span><span class="p">(</span><span class="k">lambda</span><span class="p">:</span> <span class="mi">0</span><span class="p">)</span>
@@ -15089,7 +15089,7 @@ GeoPandas : 0.9.0
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[40]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[9]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Get number of pixels per class</span>
@@ -15216,7 +15216,7 @@ GeoPandas : 0.9.0
     <tr>
       <th>5</th>
       <td>1923</td>
-      <td>Flax, hemp and other similar crops</td>
+      <td>Flax  hemp and other similar crops</td>
       <td>2059</td>
       <td>751</td>
       <td>5</td>
@@ -15358,7 +15358,7 @@ GeoPandas : 0.9.0
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[41]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[10]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">fig</span><span class="p">,</span> <span class="n">ax</span> <span class="o">=</span> <span class="n">plt</span><span class="o">.</span><span class="n">subplots</span><span class="p">(</span><span class="mi">1</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span> <span class="n">figsize</span><span class="o">=</span><span class="p">(</span><span class="mi">15</span><span class="p">,</span><span class="mi">15</span><span class="p">))</span>
@@ -15417,7 +15417,7 @@ GeoPandas : 0.9.0
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[42]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[11]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">cal_gdf</span><span class="o">.</span><span class="n">to_file</span><span class="p">(</span><span class="n">in_situ_cal_shp</span><span class="p">)</span>
