--- a/notebooks/C_Color_Map/color_map.html
+++ b/notebooks/C_Color_Map/color_map.html
@@ -14264,7 +14264,7 @@ a.anchor-link {
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[7]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[1]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="kn">import</span> <span class="nn">pandas</span> <span class="k">as</span> <span class="nn">pd</span>
@@ -14308,7 +14308,7 @@ a.anchor-link {
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[3]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[17]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">computer_path</span> <span class="o">=</span> <span class="s1">&#39;/export/miro/ndeffense/LBRAT2104/&#39;</span>
@@ -14331,12 +14331,13 @@ a.anchor-link {
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[11]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[18]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">field_name</span> <span class="o">=</span> <span class="s1">&#39;grp_A&#39;</span>
+<span class="n">field_code</span> <span class="o">=</span> <span class="s1">&#39;grp_A_nb&#39;</span>
 
-<span class="n">filename_xlsx</span> <span class="o">=</span> <span class="sa">f</span><span class="s1">&#39;</span><span class="si">{</span><span class="n">color_map_path</span><span class="si">}</span><span class="s1">color_map_</span><span class="si">{</span><span class="n">field_name</span><span class="si">}</span><span class="s1">.xlsx&#39;</span>
+<span class="n">filename_csv</span> <span class="o">=</span> <span class="sa">f</span><span class="s1">&#39;</span><span class="si">{</span><span class="n">color_map_path</span><span class="si">}</span><span class="s1">color_map_</span><span class="si">{</span><span class="n">field_name</span><span class="si">}</span><span class="s1">.csv&#39;</span>
 <span class="n">filename_clr</span>  <span class="o">=</span> <span class="sa">f</span><span class="s1">&#39;</span><span class="si">{</span><span class="n">color_map_path</span><span class="si">}</span><span class="s1">color_map_</span><span class="si">{</span><span class="n">field_name</span><span class="si">}</span><span class="s1">.clr&#39;</span>
 </pre></div>
 
@@ -14353,14 +14354,14 @@ a.anchor-link {
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[13]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[22]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">df</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">read_excel</span><span class="p">(</span><span class="n">filename_xlsx</span><span class="p">,</span> <span class="n">usecols</span><span class="o">=</span><span class="p">[</span><span class="mi">0</span><span class="p">,</span><span class="mi">1</span><span class="p">,</span><span class="mi">2</span><span class="p">,</span><span class="mi">3</span><span class="p">,</span><span class="mi">4</span><span class="p">,</span><span class="mi">5</span><span class="p">])</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="n">df</span> <span class="o">=</span> <span class="n">pd</span><span class="o">.</span><span class="n">read_csv</span><span class="p">(</span><span class="n">filename_csv</span><span class="p">,</span> <span class="n">sep</span><span class="o">=</span><span class="s1">&#39;;&#39;</span><span class="p">,</span> <span class="n">usecols</span><span class="o">=</span><span class="p">[</span><span class="n">field_name</span><span class="p">,</span><span class="s1">&#39;R&#39;</span><span class="p">,</span><span class="s1">&#39;G&#39;</span><span class="p">,</span><span class="s1">&#39;B&#39;</span><span class="p">,</span><span class="s1">&#39;T&#39;</span><span class="p">,</span><span class="n">field_code</span><span class="p">])</span>
 
 <span class="n">df</span><span class="o">.</span><span class="n">dropna</span><span class="p">(</span><span class="n">how</span><span class="o">=</span><span class="s1">&#39;all&#39;</span><span class="p">,</span> <span class="n">inplace</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
 
-<span class="n">df</span> <span class="o">=</span> <span class="n">df</span><span class="o">.</span><span class="n">astype</span><span class="p">({</span><span class="s1">&#39;R&#39;</span><span class="p">:</span> <span class="s1">&#39;int32&#39;</span><span class="p">,</span> <span class="s1">&#39;G&#39;</span><span class="p">:</span> <span class="s1">&#39;int32&#39;</span><span class="p">,</span> <span class="s1">&#39;B&#39;</span><span class="p">:</span> <span class="s1">&#39;int32&#39;</span><span class="p">,</span> <span class="s1">&#39;T&#39;</span><span class="p">:</span> <span class="s1">&#39;int32&#39;</span><span class="p">,</span> <span class="s1">&#39;grp_A_nb&#39;</span> <span class="p">:</span> <span class="s1">&#39;int32&#39;</span><span class="p">})</span>
+<span class="n">df</span> <span class="o">=</span> <span class="n">df</span><span class="o">.</span><span class="n">astype</span><span class="p">({</span><span class="s1">&#39;R&#39;</span><span class="p">:</span> <span class="s1">&#39;int32&#39;</span><span class="p">,</span> <span class="s1">&#39;G&#39;</span><span class="p">:</span> <span class="s1">&#39;int32&#39;</span><span class="p">,</span> <span class="s1">&#39;B&#39;</span><span class="p">:</span> <span class="s1">&#39;int32&#39;</span><span class="p">,</span> <span class="s1">&#39;T&#39;</span><span class="p">:</span> <span class="s1">&#39;int32&#39;</span><span class="p">,</span> <span class="n">field_code</span> <span class="p">:</span> <span class="s1">&#39;int32&#39;</span><span class="p">})</span>
 
 <span class="n">display</span><span class="p">(</span><span class="n">df</span><span class="p">)</span>
 </pre></div>
@@ -14422,9 +14423,9 @@ a.anchor-link {
     <tr>
       <th>1</th>
       <td>112</td>
-      <td>254</td>
-      <td>182</td>
-      <td>36</td>
+      <td>230</td>
+      <td>152</td>
+      <td>0</td>
       <td>255</td>
       <td>Maize</td>
     </tr>
@@ -14476,9 +14477,9 @@ a.anchor-link {
     <tr>
       <th>7</th>
       <td>118</td>
-      <td>253</td>
-      <td>81</td>
-      <td>6</td>
+      <td>255</td>
+      <td>255</td>
+      <td>153</td>
       <td>255</td>
       <td>Millets</td>
     </tr>
@@ -14489,68 +14490,68 @@ a.anchor-link {
       <td>204</td>
       <td>178</td>
       <td>255</td>
-      <td>Quinoa</td>
+      <td>Other cereals</td>
     </tr>
     <tr>
       <th>9</th>
       <td>121</td>
+      <td>133</td>
       <td>1</td>
-      <td>1</td>
-      <td>1</td>
+      <td>123</td>
       <td>255</td>
       <td>Leafy or stem vegetables</td>
     </tr>
     <tr>
       <th>10</th>
       <td>122</td>
-      <td>2</td>
-      <td>2</td>
-      <td>2</td>
+      <td>247</td>
+      <td>71</td>
+      <td>119</td>
       <td>255</td>
       <td>Fruit-bearing vegetables</td>
     </tr>
     <tr>
       <th>11</th>
       <td>123</td>
-      <td>3</td>
-      <td>3</td>
-      <td>3</td>
+      <td>149</td>
+      <td>84</td>
+      <td>97</td>
       <td>255</td>
       <td>Root, bulb or tuberous vegetables</td>
     </tr>
     <tr>
       <th>12</th>
       <td>124</td>
-      <td>4</td>
-      <td>4</td>
-      <td>4</td>
+      <td>216</td>
+      <td>248</td>
+      <td>255</td>
       <td>255</td>
       <td>Mushrooms and truffles</td>
     </tr>
     <tr>
       <th>13</th>
       <td>141</td>
-      <td>5</td>
-      <td>5</td>
-      <td>5</td>
+      <td>253</td>
+      <td>254</td>
+      <td>199</td>
       <td>255</td>
       <td>Soya beans</td>
     </tr>
     <tr>
       <th>14</th>
       <td>142</td>
-      <td>4</td>
-      <td>255</td>
-      <td>3</td>
+      <td>215</td>
+      <td>158</td>
+      <td>158</td>
       <td>255</td>
       <td>Groundnuts</td>
     </tr>
     <tr>
       <th>15</th>
       <td>143</td>
-      <td>6</td>
-      <td>6</td>
-      <td>6</td>
+      <td>120</td>
+      <td>101</td>
+      <td>146</td>
       <td>255</td>
       <td>Other oilseed crops</td>
     </tr>
@@ -14575,18 +14576,18 @@ a.anchor-link {
     <tr>
       <th>18</th>
       <td>153</td>
-      <td>7</td>
-      <td>7</td>
-      <td>7</td>
+      <td>108</td>
+      <td>79</td>
+      <td>79</td>
       <td>255</td>
       <td>Cassava</td>
     </tr>
     <tr>
       <th>19</th>
       <td>154</td>
+      <td>244</td>
       <td>8</td>
-      <td>8</td>
-      <td>8</td>
+      <td>183</td>
       <td>255</td>
       <td>Yams</td>
     </tr>
@@ -14647,9 +14648,9 @@ a.anchor-link {
     <tr>
       <th>26</th>
       <td>192</td>
-      <td>9</td>
-      <td>9</td>
-      <td>9</td>
+      <td>102</td>
+      <td>0</td>
+      <td>51</td>
       <td>255</td>
       <td>Fibre crops</td>
     </tr>
@@ -14719,18 +14720,18 @@ a.anchor-link {
     <tr>
       <th>34</th>
       <td>291</td>
-      <td>10</td>
-      <td>10</td>
-      <td>10</td>
+      <td>51</td>
+      <td>255</td>
+      <td>255</td>
       <td>255</td>
       <td>Succulent plant</td>
     </tr>
     <tr>
       <th>35</th>
       <td>5</td>
-      <td>195</td>
-      <td>205</td>
-      <td>205</td>
+      <td>102</td>
+      <td>102</td>
+      <td>0</td>
       <td>255</td>
       <td>Shrub land</td>
     </tr>
@@ -14789,7 +14790,7 @@ a.anchor-link {
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell jp-mod-noOutputs  ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[12]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[10]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">f</span> <span class="o">=</span> <span class="nb">open</span><span class="p">(</span><span class="n">filename_clr</span><span class="p">,</span> <span class="s2">&quot;w&quot;</span><span class="p">)</span>
